--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,9 @@
     
         <ul class="portfolio-list">
         <li class="portfolio-list-item">
+            <div class="text-overlay">
+                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
            <a class="portfolio-list-link" href=""> <img src="./images/project1.png" alt="страница сайта">
             <div class="portfolio-list-wrapper">
             <h2 class="portfolio-title">Технокряк</h2>
