--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="hero-list">
         <section class="hero">
             <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="modal-btn" type="button">Заказать услугу</button>
+            <button class="modal-btn" type="button" data-modal-open>Заказать услугу</button>
         </div>
         </section>
         <!--Особенности-->
@@ -105,12 +105,18 @@
             <h2 class="task-title">Чем мы занимаемся</h2>
             <ul class="task-item">
                 <li class="task-item-list"><img class="task-image" src="./images/work1.jpg" alt="набирает текст на клавиатуре" width="370"
-                        height="294"></li>
+                        height="294">
+                            <p class="undertitle">Десктопные приложения</p>
+                        </li>
                 <li class="task-item-list"><img class="task-image" src="./images/work2.jpg" alt="смотрит на изображение телефона на мониторе"
-                        width="370" height="294"></li>
+                        width="370" height="294">
+                            <p class="undertitle">Мобильные приложения</p>
+                        </li>
                 <li class="task-item-list"><img class="task-image" src="./images/work3.jpg" alt="смотрит на палитру цветов на планшете"
-                        width="370" height="294"></li>
-                </ul>
+                        width="370" height="294">
+                        <p class="undertitle">Дизайнерские решения</p>
+                    </li>
+                </ul>        
         </div>
         </section>
         <section class="team-section">
@@ -361,6 +367,16 @@
         </div>
     </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="close-btn" data-modal-close>
+                <svg class="close-icon" width="18" height="20">
+                    <use href="./images/sprite.svg#icon-close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
