--- a/portfolio.html
+++ b/portfolio.html
@@ -70,8 +70,10 @@
     
         <ul class="portfolio-list">
         <li class="portfolio-list-item">
-           <a class="portfolio-list-link" href=""> <img src="./images/project1.png" alt="страница сайта">
-            <div class="portfolio-list-wrapper">
+            <a class="portfolio-list-link" href=""> <img src="./images/project1.png" alt="страница сайта">
+                <div class="overlay"><p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+                <div class="portfolio-list-wrapper">
             <h2 class="portfolio-title">Технокряк</h2>
             <p class="portfolio-description">Веб-сайт</p>
         </div>
