--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <h3 class="team-name">Николай Тарасов</h3>
                     <p class="team-designation">Marketing</p>
                     <ul class="social-list">
-                        <li class="social-list-item" width="20" height="20"> 
+                        <li class="social-list-item"> 
                             <a class="social-list-link" href="">
                                 <svg class="social-list-icon" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-instagram"></use>
